--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ p {
   margin-right: auto;
   margin-bottom: 1.2rem;
 }
+
+.bg-grey {
+  background-color: var(--clr-grey-10);
+}
 /* added during recording */
 
 /*
@@ -453,14 +457,178 @@ About
 Services
 ===============
 */
-/* small screen layout setup */
-/* bg-grey in globals */
+
+.service {
+  background: var(--clr-white);
+  padding: 2rem 1.5rem;
+  margin-bottom: 1.2rem;
+  text-align: center;
+  transition: var(--transition);
+  border-radius: var(--radius);
+}
+
+.service-icon {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  transition: var(--transition);
+}
+
+.service .underline {
+  width: 3rem;
+  height: 0.12rem;
+  transition: var(--transition);
+}
+
+.service p {
+  transition: var(--transition);
+}
+
+.service:hover {
+  background-color: var(--clr-primary-5);
+  color: var(--clr-white);
+}
+
+.service:hover p {
+  color: var(--clr-white);
+}
+
+.service:hover .underline {
+  background-color: var(--clr-white);
+}
+
+@media screen and (min-width: 765px) {
+  .services-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .services-center {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1rem;
+  }
+}
 
 /*
 =============== 
 Projects
 ===============
 */
+
+.project-text {
+  width: 85vw;
+  max-width: 30rem;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.project {
+  position: relative;
+  background-color: var(--clr-primary-5);
+  margin-bottom: 2rem;
+  border-radius: var(--radius);
+}
+
+.project-info {
+  text-align: center;
+  color: var(--clr-white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: var(--transition);
+  opacity: 0;
+}
+
+.project-info p {
+  text-transform: capitalize;
+  color: var(--clr-white);
+}
+
+.project:hover .project-info {
+  opacity: 1;
+}
+
+.project-img {
+  height: 17rem;
+  object-fit: cover;
+  border-radius: var(--radius);
+  transition: var(--transition);
+}
+
+.project:hover .project-img {
+  opacity: 0.3;
+}
+
+.project::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0.25rem solid var(--clr-white);
+  border-radius: var(--radius);
+  transition: var(--transition);
+  opacity: 0;
+}
+
+.project:hover::after {
+  opacity: 1;
+  transform: scale(0.8);
+}
+
+@media screen and (min-width: 765px) {
+  .projects-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .projects-center {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  .projects-center {
+    grid-template-rows: 200px 200px;
+    grid-template-areas:
+      "a b b"
+      "a c d";
+    row-gap: 1rem;
+  }
+
+  .project-img {
+    height: 100%;
+  }
+
+  .project {
+    height: 100%;
+  }
+
+  .project-1 {
+    grid-area: a;
+  }
+
+  .project-2 {
+    grid-area: b;
+  }
+
+  .project-3 {
+    grid-area: c;
+  }
+
+  .project-4 {
+    grid-area: d;
+  }
+}
 
 /*
 =============== 
