--- a/css/style.css
+++ b/css/style.css
@@ -636,11 +636,141 @@ Connect
 ===============
 */
 
+.connect {
+  min-height: 50vh;
+  padding: 10rem 0 5rem 0;
+  margin-top: 5rem 0;
+  position: relative;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.connect::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-white);
+  opacity: 0.5;
+  z-index: -1;
+}
+
+.connect {
+  display: grid;
+  place-items: center;
+}
+
+.video-banner .section-title {
+  margin-bottom: 2rem;
+}
+
+.video-banner {
+  background-color: var(--clr-primary-10);
+  padding: 3rem 5rem 12rem 5rem;
+  text-align: center;
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 75%,
+    75% 75%,
+    75% 100%,
+    50% 75%,
+    0% 75%
+  );
+}
+
+.video-text {
+  max-width: 30rem;
+}
+
+.connect {
+  clip-path: polygon(48% 0, 100% 11%, 100% 90%, 53% 100%, 0 91%, 0 11%);
+}
+
 /*
 =============== 
 Skills
 ===============
 */
+.skills {
+  background-color: var(--clr-primary-10);
+  margin-top: 5rem;
+}
+
+.skills h3 {
+  color: var(--clr-primary-1);
+  margin: 2rem 0;
+}
+
+.skill {
+  margin-bottom: 1rem;
+}
+
+.skill p {
+  text-transform: capitalize;
+  color: var(--clr-primary-1);
+  margin-bottom: 1rem;
+}
+
+.skill-container {
+  background-color: var(--clr-white);
+  height: 1rem;
+  width: 100%;
+  position: relative;
+}
+
+.skill-value {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1rem;
+  width: 50%;
+  background-color: var(--clr-primary-6);
+  border-radius: var(--radius);
+}
+
+.skill-value-70 {
+  width: 70%;
+}
+
+.skill-value-80 {
+  width: 80%;
+}
+
+.skill-text {
+  position: absolute;
+  top: -2rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.skill-70 {
+  left: 70%;
+  transform: translateX(-70%);
+}
+
+.skill-80 {
+  left: 80%;
+  transform: translateX(-80%);
+}
+
+@media screen and (min-width: 768px) {
+  .skills-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem;
+  }
+}
 /*
 =============== 
 Timeline
